data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4331.wast
;; 10. **Test 10**: Simulate concurrency or rapid state changes with `call_indirect`, where function types in the table are altered mid-execution. Assess how both implementations react to these rapid changes, focusing on ensuring the correct function type conformity and appropriate error trapping behaviors.

(assert_invalid
  (module
    (type (func (param i32)))
    (type (func (param f64)))
    (table 2 funcref)
    (elem (i32.const 0) 0)
    (elem (i32.const 1) 1)
    (func $concurrency-simulate
      ;; Initially call a function expecting i32
      (call_indirect (type 0) (i32.const 0) (i32.const 1))
      ;; Simulate rapid state change to a function expecting f64
      (call_indirect (type 1) (f64.const 1) (i32.const 1))
      ;; Restore the original state and validate
      (call_indirect (type 0) (i32.const 0) (i32.const 0))
    )
  )
  "type mismatch"
)